@@ -1,3 +1,8 @@
+2014-03-24  Andrew MacLeod  <amacleod@redhat.com>
+
+	* tree-dfa.h (get_addr_base_and_unit_offset_1):  Move from here.
+	* tree-dfa.c (get_addr_base_and_unit_offset_1): To here.
+
 2014-03-24  Alex Velenko  <Alex.Velenko@arm.com>
 
 	* config/aarch64/aarch64-simd-builtins.def (lshr): DI mode excluded.
